# BYU.CS-142

./: README.md
Lab 1 - Do As I'm Doing/: CMakeLists.txt  README.md  main.cpp
Lab 2 - Pizza/: CMakeLists.txt  README.md  main.cpp
Lab 3 - Simple String Editor/: CMakeLists.txt  README.md  main.cpp
Lab 4 - Plinko Simulator/: CMakeLists.txt  README.md  main.cpp
Lab 5 - Hotplate Simulator/: CMakeLists.txt  Hotplate.csv  Lab 5.cpp  README.md
Lab 6 - Restaurant Battles/: CMakeLists.txt  Lab 6.cpp  README.md
Lab 7 - Shopping Cart Builder/: CMakeLists.txt  ItemToPurchase.cpp  ItemToPurchase.h  README.md  ShoppingCart.cpp  ShoppingCart.h  main.cpp
Lab 8 - Music Library/: CMakeLists.txt  Playlist.cpp  Playlist.h  README.md  Song.cpp  Song.h  main.cpp
Lab 9 - Bakery Order System/: BakedGood.cpp  BakedGood.h  Bread.cpp  Bread.h  CMakeLists.txt  Cake.cpp  Cake.h  CupCake.cpp  CupCake.h  LayerCake.cpp  LayerCake.h  README.md  main.cpp
